--- a/3. Concepts in deep learning/9. Are artificial "neurons" like biological neurons?.md
+++ b/3. Concepts in deep learning/9. Are artificial "neurons" like biological neurons?.md
@@ -4,15 +4,15 @@
 ---
 ## What are neurons?
 
-![](9.Pasted%20image%2020240930210748.png)
-![](9.Pasted%20image%2020240930210815.png)
+![9.Pasted image 20240930210748](../pic/3.%20Concepts%20in%20deep%20learning/9.Pasted%20image%2020240930210748.png)
+![9.Pasted image 20240930210815](../pic/3.%20Concepts%20in%20deep%20learning/9.Pasted%20image%2020240930210815.png)
 
 
 결론 : 실제 뉴런은 비교도 되지 않을만큼  엄청나게 복잡하다.
 
 ---
 ## What are artificial neurons?
-![](9.Pasted%20image%2020240930211050.png)
+![9.Pasted image 20240930211050](../pic/3.%20Concepts%20in%20deep%20learning/9.Pasted%20image%2020240930211050.png)
 	인공 뉴런은 거의 100년전에 만들어진 모델
 
 	강사의 말 : 인공뉴런의 모델이 실제 뉴런이라는 것은, 믹서기의 모델이 인간이라는 말과 동일하다. 음식을 투입하면 가공된 무엇인가가 나오니까..
